build/generated-src/antlr/main/lv426/compiler/parser/lv426/compiler/parser/HopeLangParser.java
// Generated from lv426/compiler/parser/HopeLang.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class HopeLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, CONST=2, VAR=3, STRUCT=4, ENUM=5, EVENT=6, DEF=7, ON=8, START=9, 
		EVERY=10, AT=11, EMIT=12, IF=13, ELIF=14, ELSE=15, WHILE=16, FOR=17, FROM=18, 
		TO=19, STEP=20, BREAK=21, CONTINUE=22, RETURN=23, OF=24, END=25, LIST=26, 
		TRUE=27, FALSE=28, AND=29, OR=30, NOT=31, INT_TYPE=32, REAL_TYPE=33, BOOL_TYPE=34, 
		STRING_TYPE=35, TIME_TYPE=36, VOID_TYPE=37, MILLISECOND_UNIT=38, SECOND_UNIT=39, 
		MINUTE_UNIT=40, HOUR_UNIT=41, DAY_UNIT=42, PLUS_ASSIGN=43, MINUS_ASSIGN=44, 
		MUL_ASSIGN=45, DIV_ASSIGN=46, MOD_ASSIGN=47, EQ=48, NEQ=49, LTE=50, GTE=51, 
		LT=52, GT=53, ASSIGN=54, PLUS=55, MINUS=56, MUL=57, DIV=58, MOD=59, DOT=60, 
		COMMA=61, SEMI=62, LPAREN=63, RPAREN=64, LBRACK=65, RBRACK=66, REAL_LITERAL=67, 
		INT_LITERAL=68, STRING_LITERAL=69, ID=70, LINE_COMMENT=71, BLOCK_COMMENT=72, 
		WS=73;
	public static final int
		RULE_source = 0, RULE_programDecl = 1, RULE_topLevelDecl = 2, RULE_constDecl = 3, 
		RULE_globalVarDecl = 4, RULE_structDecl = 5, RULE_fieldDecl = 6, RULE_enumDecl = 7, 
		RULE_enumMember = 8, RULE_eventDecl = 9, RULE_startHandler = 10, RULE_eventHandler = 11, 
		RULE_everyHandler = 12, RULE_atHandler = 13, RULE_identifierList = 14, 
		RULE_functionDecl = 15, RULE_parameterList = 16, RULE_parameter = 17, 
		RULE_typeRef = 18, RULE_typeAtom = 19, RULE_primitiveType = 20, RULE_arraySize = 21, 
		RULE_statement = 22, RULE_localVarDecl = 23, RULE_assignmentStatement = 24, 
		RULE_assignmentOperator = 25, RULE_lvalue = 26, RULE_lvalueSuffix = 27, 
		RULE_ifStatement = 28, RULE_whileStatement = 29, RULE_forStatement = 30, 
		RULE_breakStatement = 31, RULE_continueStatement = 32, RULE_returnStatement = 33, 
		RULE_emitStatement = 34, RULE_expressionStatement = 35, RULE_expression = 36, 
		RULE_logicalOr = 37, RULE_logicalAnd = 38, RULE_equality = 39, RULE_comparison = 40, 
		RULE_additive = 41, RULE_multiplicative = 42, RULE_unary = 43, RULE_postfix = 44, 
		RULE_postfixSuffix = 45, RULE_primary = 46, RULE_argumentList = 47, RULE_literal = 48, 
		RULE_durationLiteral = 49, RULE_timeUnit = 50;
	private static String[] makeRuleNames() {
		return new String[] {
			"source", "programDecl", "topLevelDecl", "constDecl", "globalVarDecl", 
			"structDecl", "fieldDecl", "enumDecl", "enumMember", "eventDecl", "startHandler", 
			"eventHandler", "everyHandler", "atHandler", "identifierList", "functionDecl", 
			"parameterList", "parameter", "typeRef", "typeAtom", "primitiveType", 
			"arraySize", "statement", "localVarDecl", "assignmentStatement", "assignmentOperator", 
			"lvalue", "lvalueSuffix", "ifStatement", "whileStatement", "forStatement", 
			"breakStatement", "continueStatement", "returnStatement", "emitStatement", 
			"expressionStatement", "expression", "logicalOr", "logicalAnd", "equality", 
			"comparison", "additive", "multiplicative", "unary", "postfix", "postfixSuffix", 
			"primary", "argumentList", "literal", "durationLiteral", "timeUnit"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program'", "'const'", "'var'", "'struct'", "'enum'", "'event'", 
			"'def'", "'on'", "'start'", "'every'", "'at'", "'emit'", "'if'", "'elif'", 
			"'else'", "'while'", "'for'", "'from'", "'to'", "'step'", "'break'", 
			"'continue'", "'return'", "'of'", "'end'", "'list'", "'true'", "'false'", 
			"'and'", "'or'", "'not'", "'int'", "'real'", "'bool'", "'string'", "'time'", 
			"'void'", "'ms'", "'sec'", "'min'", "'hour'", "'day'", "'+='", "'-='", 
			"'*='", "'/='", "'%='", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", 
			"'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'.'", "','", "';'", "'('", 
			"')'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAM", "CONST", "VAR", "STRUCT", "ENUM", "EVENT", "DEF", "ON", 
			"START", "EVERY", "AT", "EMIT", "IF", "ELIF", "ELSE", "WHILE", "FOR", 
			"FROM", "TO", "STEP", "BREAK", "CONTINUE", "RETURN", "OF", "END", "LIST", 
			"TRUE", "FALSE", "AND", "OR", "NOT", "INT_TYPE", "REAL_TYPE", "BOOL_TYPE", 
			"STRING_TYPE", "TIME_TYPE", "VOID_TYPE", "MILLISECOND_UNIT", "SECOND_UNIT", 
			"MINUTE_UNIT", "HOUR_UNIT", "DAY_UNIT", "PLUS_ASSIGN", "MINUS_ASSIGN", 
			"MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "EQ", "NEQ", "LTE", "GTE", 
			"LT", "GT", "ASSIGN", "PLUS", "MINUS", "MUL", "DIV", "MOD", "DOT", "COMMA", 
			"SEMI", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "REAL_LITERAL", "INT_LITERAL", 
			"STRING_LITERAL", "ID", "LINE_COMMENT", "BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HopeLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HopeLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(HopeLangParser.EOF, 0); }
		public ProgramDeclContext programDecl() {
			return getRuleContext(ProgramDeclContext.class,0);
		}
		public List<TopLevelDeclContext> topLevelDecl() {
			return getRuleContexts(TopLevelDeclContext.class);
		}
		public TopLevelDeclContext topLevelDecl(int i) {
			return getRuleContext(TopLevelDeclContext.class,i);
		}
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HopeLangVisitor ) return ((HopeLangVisitor<? extends T>)visitor).visitSource(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PROGRAM) {
				{
				setState(102);
				programDecl();
				}
			}

			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3580L) != 0)) {
				{
				{
				setState(105);
				topLevelDecl();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramDeclContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(HopeLangParser.PROGRAM, 0); }
		public TerminalNode ID() { return getToken(HopeLangParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(HopeLangParser.SEMI, 0); }
		public ProgramDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HopeLangVisitor ) return ((HopeLangVisitor<? extends T>)visitor).visitProgramDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramDeclContext programDecl() throws RecognitionException {
		ProgramDeclContext _localctx = new ProgramDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(PROGRAM);
			setState(114);
			match(ID);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(115);
				match(SEMI);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopLevelDeclContext extends ParserRuleContext {
		public ConstDeclContext constDecl() {
			return getRuleContext(ConstDeclContext.class,0);
		}
		public GlobalVarDeclContext globalVarDecl() {
			return getRuleContext(GlobalVarDeclContext.class,0);
		}
		public StructDeclContext structDecl() {
			return getRuleContext(StructDeclContext.class,0);
		}
		public EnumDeclContext enumDecl() {
			return getRuleContext(EnumDeclContext.class,0);
		}
		public EventDeclContext eventDecl() {
			return getRuleContext(EventDeclContext.class,0);
		}
		public FunctionDeclContext functionDecl() {
			return getRuleContext(FunctionDeclContext.class,0);
		}
		public StartHandlerContext startHandler() {
			return getRuleContext(StartHandlerContext.class,0);
		}
		public EventHandlerContext eventHandler() {
			return getRuleContext(EventHandlerContext.class,0);
		}
		public EveryHandlerContext everyHandler() {
			return getRuleContext(EveryHandlerContext.class,0);
		}
		public AtHandlerContext atHandler() {
			return getRuleContext(AtHandlerContext.class,0);
		}
		public TopLevelDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HopeLangVisitor ) return ((HopeLangVisitor<? extends T>)visitor).visitTopLevelDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelDeclContext topLevelDecl() throws RecognitionException {
		TopLevelDeclContext _localctx = new TopLevelDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_topLevelDecl);
		try {
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				constDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				globalVarDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(120);
				structDecl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(121);
				enumDecl();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(122);
				eventDecl();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(123);
				functionDecl();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(124);
				startHandler();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(125);
				eventHandler();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(126);
				everyHandler();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(127);
				atHandler();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstDeclContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(HopeLangParser.CONST, 0); }
		public TerminalNode ID() { return getToken(HopeLangParser.ID, 0); }
		public TerminalNode OF() { return getToken(HopeLangParser.OF, 0); }
		public TypeRefContext typeRef() {
			return getRuleContext(TypeRefContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(HopeLangParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(HopeLangParser.SEMI, 0); }
		public ConstDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HopeLangVisitor ) return ((HopeLangVisitor<? extends T>)visitor).visitConstDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstDeclContext constDecl() throws RecognitionException {
		ConstDeclContext _localctx = new ConstDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_constDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(CONST);
			setState(131);
			match(ID);
			setState(132);
			match(OF);
			setState(133);
			typeRef();
			setState(134);
			match(ASSIGN);
			setState(135);
			expression();
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(136);
				match(SEMI);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalVarDeclContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(HopeLangParser.VAR, 0); }
		public TerminalNode ID() { return getToken(HopeLangParser.ID, 0); }
		public TerminalNode OF() { return getToken(HopeLangParser.OF, 0); }
		public TypeRefContext typeRef() {
			return getRuleContext(TypeRefContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(HopeLangParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(HopeLangParser.SEMI, 0); }
		public GlobalVarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalVarDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HopeLangVisitor ) return ((HopeLangVisitor<? extends T>)visitor).visitGlobalVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalVarDeclContext globalVarDecl() throws RecognitionException {
		GlobalVarDeclContext _localctx = new GlobalVarDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_globalVarDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(VAR);
			setState(140);
			match(ID);
			setState(141);
			match(OF);
			setState(142);
			typeRef();
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(143);
				match(ASSIGN);
				setState(144);
				expression();
				}
			}

			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(147);
				match(SEMI);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructDeclContext extends ParserRuleContext {
		public TerminalNode STRUCT() { return getToken(HopeLangParser.STRUCT, 0); }
		public TerminalNode ID() { return getToken(HopeLangParser.ID, 0); }
		public TerminalNode END() { return getToken(HopeLangParser.END, 0); }
		public List<FieldDeclContext> fieldDecl() {
			return getRuleContexts(FieldDeclContext.class);
		}
		public FieldDeclContext fieldDecl(int i) {
			return getRuleContext(FieldDeclContext.class,i);
		}
		public StructDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HopeLangVisitor ) return ((HopeLangVisitor<? extends T>)visitor).visitStructDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructDeclContext structDecl() throws RecognitionException {
		StructDeclContext _localctx = new StructDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_structDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(STRUCT);
			setState(151);
			match(ID);
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(152);
				fieldDecl();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(158);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FieldDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(HopeLangParser.ID, 0); }
		public TerminalNode OF() { return getToken(HopeLangParser.OF, 0); }
		public TypeRefContext typeRef() {
			return getRuleContext(TypeRefContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(HopeLangParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(HopeLangParser.SEMI, 0); }
		public FieldDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HopeLangVisitor ) return ((HopeLangVisitor<? extends T>)visitor).visitFieldDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldDeclContext fieldDecl() throws RecognitionException {
		FieldDeclContext _localctx = new FieldDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_fieldDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(ID);
			setState(161);
			match(OF);
			setState(162);
			typeRef();
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(163);
				match(ASSIGN);
				setState(164);
				expression();
				}
			}

			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(167);
				match(SEMI);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnumDeclContext extends ParserRuleContext {
		public TerminalNode ENUM() { return getToken(HopeLangParser.ENUM, 0); }
		public TerminalNode ID() { return getToken(HopeLangParser.ID, 0); }
		public TerminalNode END() { return getToken(HopeLangParser.END, 0); }
		public List<EnumMemberContext> enumMember() {
			return getRuleContexts(EnumMemberContext.class);
		}
		public EnumMemberContext enumMember(int i) {
			return getRuleContext(EnumMemberContext.class,i);
		}
		public EnumDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HopeLangVisitor ) return ((HopeLangVisitor<? extends T>)visitor).visitEnumDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnumDeclContext enumDecl() throws RecognitionException {
		EnumDeclContext _localctx = new EnumDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_enumDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(ENUM);
			setState(171);
			match(ID);
			setState(173); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(172);
				enumMember();
				}
				}
				setState(175); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(177);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnumMemberContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(HopeLangParser.ID, 0); }
		public TerminalNode COMMA() { return getToken(HopeLangParser.COMMA, 0); }
		public TerminalNode SEMI() { return getToken(HopeLangParser.SEMI, 0); }
		public EnumMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumMember; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HopeLangVisitor ) return ((HopeLangVisitor<? extends T>)visitor).visitEnumMember(this);
			else return visitor.visitChildren(this);
		}
	}
